hydroflow/tests/compile-fail/surface_use_unknown.stderr
error[E0432]: unresolved import `x`
 --> tests/compile-fail/surface_use_unknown.rs:5:13
  |
5 |         use x;
  |             ^ no external crate `x`
